working with http & lifecyle events

--- a/src/pages/tournaments/tournaments.html
+++ b/src/pages/tournaments/tournaments.html
@@ -10,8 +10,9 @@
 
 <ion-content padding>
   <ion-list>
-    <button ion-item (click)="itemTapped()">March Madness </button>
-    <button ion-item (click)="itemTapped()">Summer showdown </button>
+    <button ion-item
+        (click)="itemTapped($event, item)"
+        *ngFor="let item of tournaments">{{ item.name }}</button>
   </ion-list>
 
 </ion-content>
