--- a/src/pages/game/game.html
+++ b/src/pages/game/game.html
@@ -1,12 +1,6 @@
-<!--
-  Generated template for the GamePage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
-  <ion-navbar>
+  <ion-navbar color="primary">
     <ion-title>Game</ion-title>
   </ion-navbar>
 
@@ -14,5 +8,9 @@
 
 
 <ion-content padding>
+  <h3>Home Team</h3>
+  <button ion-button (click)="teamTapped(game?.team1Id)">{{ game?.team1 }}</button>
 
+  <h3>Away Team</h3>
+  <button ion-button (click)="teamTapped(game?.team2Id)">{{ game?.team2 }}</button>
 </ion-content>
